# Mitoujr_Alpha

./: .editorconfig  .gitignore  AGENTS.md  DESIGN.md  Makefile  PLAN.md  PLAN_GLOBAL.md  README.md
.github/workflows/: phase0.yml
bitter/: Cargo.toml  README.md
bitter/src/: main.rs
diagnostics/: codes.md
docs/: apply-filesystem-boundary.md  architecture.md  cli-contract.md  decisions.md  extension-protocol.md  fixtures.md  glossary.md  implementation-plan.md  invariants.md  overview.md  schema-notes.md  sugar-bitter-boundary-options.md
docs/logs/: bootstrap-log-0001.md
fixtures/: README.md
fixtures/basic/: README.md
golden/: README.md
golden/check/: basic.expected.json
golden/derive/: linking-to-sidecar.expected.json
golden/inspect/: linking.expected.json
golden/normal-form/: representative.command-result.json
golden/resolve/: latency-run-a.expected.json
golden/scan/: basic.expected.json
golden/workspace-transitions/: apply-identity-mismatch.json  apply-overlap.json  apply-range-out-of-bounds.json  apply-repeated-no-op.json  apply-result-identity-mismatch.json  apply-title-replacement.json
protocol/: extension-protocol.md
schemas/: annotation.schema.json  artifact.schema.json  capability.schema.json  command-result.schema.json  diagnostic.schema.json  patch.schema.json  reference.schema.json  region.schema.json  snapshot.schema.json
sugar/: README.md  dune-project
sugar/lib/: dune  (+51 more)
sugar/test/: dune  normal_fixture.ml  test_selector_normalization.ml  test_semantic.ml  transition_fixture.ml
tools/: check_golden.py  check_phase0.py
(+4 files in other folders)
