(test
 (name test_semantic)
 (libraries monika_sugar alcotest qcheck-alcotest unix))

(test
 (name test_selector_normalization)
 (libraries monika_sugar alcotest))

(executable
 (name normal_fixture)
 (libraries monika_sugar yojson))

(executable
 (name transition_fixture)
 (libraries monika_sugar yojson))
